--- a/css/style.css
+++ b/css/style.css
@@ -800,6 +800,10 @@ video {
   row-gap: 1.75rem;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
